# docs-hygiene

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_ZH.md  ROADMAP.md  docs-hygiene.yml  governance-edge-implementation-manifest.yml  implementation-manifest.yml  kimi.plugin.json  profile-implementation-manifest.yml  sdk-manifest.yml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
concept/: Adapter.md  Policy Engine.md
docs/: 01_overview.md  02_configuration.md  03_rules.md  04_adapters.md  05_ci.md  06_document_contracts.md  07_governance_graph.md  08_terminology_migration.md  09_source_file_governance.md  10_progressive_rule_activation.md  11_domain_topology.md  11_hygiene_governance_model.md  12_hygiene_profile.md  13_slug_identity.md  14_document_kinds.md  15_library_claims.md  16_critical_dependency_pins.md  17_portable_snapshots.md  18_supernode_exceptions.md  19_document_ownership.md  README.md
scripts/: check-file-size.sh
site/: index.md  package.json
src/: activation.rs  checks.rs  config.rs  date.rs  document_kinds.rs  governance.rs  kind_migration.rs  lib.rs  main.rs  markdown.rs  ownership.rs  pin_update.rs  portable_snapshot.rs  profile.rs  project_io.rs  reference.rs  report.rs  repository_anchor.rs  snapshot_import.rs  template_migration.rs  yaml.rs
tests/: cli.rs  dogfood.rs  kind_migration.rs  kind_scaffold.rs  library_claim_scan.rs  pin_update.rs  review_reset.rs  slug_identity_cli.rs  snapshot_import.rs  template_migration.rs  topology_cli.rs
(+733 files in other folders)
